[package]
name = "genfsm"
version = "0.0.2"
authors = ["Brandon Sanderson <bas.bsanders@gmail.com>"]

description = "A simple generic finite state machine library."
repository = "https://github.com/brandonson/genfsm-rs"
documentation = "https://brandonson.github.io/genfsm-rs/"

readme = "README.md"
license = "MIT"

